update partie front

--- a/pages/habitats.html
+++ b/pages/habitats.html
@@ -240,6 +240,30 @@
   </div>
 </div>
 
+<!--Modal Edition text-->
+<div class="modal fade" id="EditionTextModal" tabindex="-1" aria-labelledby="EditionTextModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title fs-5" id="EditionTextModalLabel">Edition text</h2>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <form>
+        <div class="mb-3">
+          <label for="TextInput" class="form-label"></label>
+        </div>
+        <div class="modal-body">
+          <textarea class="form-control" style="min-width: 100%" id="TextInput"></textarea>
+        </div>
+        <div class="text-center pb-3">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Enregistrer</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
 <!--Modal Suppression-->
 <div class="modal fade" id="DeletePhotoModal" tabindex="-1" aria-labelledby="DeletePhotoModalLabel" aria-hidden="true">
   <div class="modal-dialog">
